log
Thu 12 Oct 2023 06:25:51 PM UTC: 
 tests:  0|4
total_score: 0/70
c019b9b
Thu 12 Oct 2023 06:28:07 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘monticulo’ [-Werror=unused-variable]
   36 |   Heap* monticulo = (Heap*)malloc(sizeof(Heap));
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b5975f
Thu 12 Oct 2023 06:28:37 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
41738dd
Thu 12 Oct 2023 06:28:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
d6c5368
Thu 12 Oct 2023 06:29:19 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
8b057ea
Thu 12 Oct 2023 06:29:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   43 |   monticulo->heapArray=(int*)malloc(sizeof(int));
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
21a7bcd
Thu 12 Oct 2023 06:30:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
10898d4
Thu 12 Oct 2023 06:30:49 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ec0ad4f
Thu 12 Oct 2023 06:31:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6350f93
Thu 12 Oct 2023 06:31:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   43 |   monticulo->heapArray=(int*)malloc(monticulo->capac*sizeof(int));
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
b24903a
